--- a/vegasrem.css
+++ b/vegasrem.css
@@ -246,3 +246,5 @@ p.online{content:url("https://files.gamebanana.com/bitpit/online_3__1_.gif");}
 .details-table td {background:#00000044 !important;}
 .details-table tr td:nth-child(1) {color:cyan !important;}
 .details-table tr td:nth-child(1) a {color:cyan !important;}
+
+.comment-replies {border:none;border-top:1px solid;}
