--- a/vegasrem.css
+++ b/vegasrem.css
@@ -248,3 +248,5 @@ p.online{content:url("https://files.gamebanana.com/bitpit/online_3__1_.gif");}
 .details-table tr td:nth-child(1) a {color:cyan !important;}
 
 .comment-replies {border:none;border-top:1px solid;}
+
+hr {color:cyan;}
