--- a/vegasrem.css
+++ b/vegasrem.css
@@ -249,4 +249,4 @@ p.online{content:url("https://files.gamebanana.com/bitpit/online_3__1_.gif");}
 
 .comment-replies {border:none;border-top:1px solid;}
 
-hr {color:cyan;}
+blurbs hr {color:cyan;}
